--- a/templates/base.html
+++ b/templates/base.html
@@ -7,17 +7,20 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>{% block title %}App Chat{% endblock %}</title>
+      <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+      <title>{% block title %}App Chat{% endblock %}</title>
   </head>
   <style>
     .chat-message {
       width: 100%;
       border-radius: 6px;
-      margin: 2px 0px;
+      margin: 2px 0;
+        
     }
     .card{
       max-width: initial;
+      margin-top: 5px;
+
     }
     .card-block{
       padding: 28px 20px;
