--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,7 @@
         <form method="post">
           {% csrf_token %}
           {{ form.as_p }}
-          <button type="submit" class="btn btn-primary btn-lg btn-block">Log In</button>
+          <button type="submit" class="btn btn-outline-dark">Log In</button>
         </form>
       </div>
 </div>  
