--- a/templates/room/rooms.html
+++ b/templates/room/rooms.html
@@ -9,32 +9,59 @@
     <div class="alert alert-info d-flex justify-content-between" role="alert">
         <h5>Available Public Rooms</h5>
         <a href="/accounts/logout/">
-          <button type="button" class="btn btn-light">Log Out</button>
+            <button type="button" class="btn btn-outline-dark">Log Out</button>
         </a>
       </div>
-      
-      
+      <div class="input-group">
+          <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+                 aria-describedby="search-addon"/>
+          <button type="button" class="btn btn-outline-primary" data-mdb-ripple-init>search</button>
+      </div>
+      <br>
+      <button id="show-form-button" onclick="showForm()" class="btn btn-primary">New room</button>
+      <br>
+      <form id="create-room-form" action="/create_room/" method="post" name="create_room" class="form-group"
+            style="display: none;">
+          {% csrf_token %}
+          <label for="owner">Owner</label>
+          <input type="text" name="owner" id="owner" class="form-control" readonly>
+
+          <label for="name_room">Name Room</label>
+          <input type="text" name="name_room" id="name_room" class="form-control">
+
+          <label for="password">Password</label>
+          <input type="password" name="password" id="password" class="form-control">
+
+          <br>
+          <button type="submit" class="btn btn-primary">Create</button>
+      </form>
+      <br>
       {% if rooms %}
         <div class="row equal">
             {% for room in rooms %}
-            
-            <div class="col-sm-4 d-flex pb-3">
+            <div class="col-sm-3 d-flex pb-3">
                 <div class="card bg-light mb-3" style="max-width: 18rem;">
                     <div class="card-block">
                         <h3 class="card-title">{{room.name_room}}</h3>
-                        <a href="/{{room.slug}}" class="btn  btn-primary">Join Room</a>
+                        <a href="/{{ room.slug }}" class="btn btn-primary">Join Room</a>
                     </div>
                 </div>
             </div>
-
             {% endfor %}
-        
         </div>
     {% else %}
             No Rooms Available!
     {% endif %}
 </div>
+    <script>
+        function showForm() {
+            document.getElementById("create-room-form").style.display = "block";
+            document.getElementById("owner").value = "{{ request.user.username }}";
+            {#document.getElementById("owner").value = "test";#}
+            document.getElementById("show-form-button").style.display = "none";
+        }
 
+    </script>
 
 
 {% else %}
